src/components/PresetEditor.module.css
.preset-editor {
  display: flex;
  flex-direction: column;
  align-items: stretch;
  justify-content: flex-start;
  gap: 1rem;
}

.sequence-editor {
  display: flex;
  flex-direction: column;
  align-items: stretch;
  justify-content: flex-start;
  gap: 0.5rem;

  border: 2px solid var(--background-color-alt);
  border-radius: var(--radius);
}
.sequence-editor-items {
  display: flex;
  flex-direction: column;
  align-items: stretch;
  justify-content: flex-start;
  gap: 0.5rem;
}
.sequence-editor-item {
  display: flex;
  flex-direction: column;
  align-items: stretch;
  justify-content: flex-start;
  gap: 0.5rem;

  padding: 0.5rem;
}
.sequence-editor-item-value {
  flex-grow: 1;
  display: flex;
  flex-direction: column;
  align-items: stretch;
  justify-content: flex-start;
}
.sequence-editor-item > footer {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  gap: 0.5rem;
}
.sequence-editor > footer {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;

  padding: 0.5rem;
  background-color: var(--background-color-alt);
}
.sequence-editor > footer > .left, .sequence-editor > footer > .right {
  flex-grow: 1;
  flex-basis: 0;
}
.sequence-editor > footer > .left {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: flex-start;
  gap: 0.5rem;
}
.sequence-editor > footer > .right {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: flex-end;
  gap: 0.5rem;
}
.sequence-editor > footer > button {
  border-radius: 50%;
  padding: 0.5rem;
}

.loop-editor {
  display: flex;
  flex-direction: column;
  align-items: stretch;
  justify-content: flex-start;
}
.loop-editor-header {
  display: flex;
  flex-direction: column;
  align-items: stretch;
  justify-content: flex-start;
  gap: 0.5rem;

  padding: 0.5rem;
  background-color: var(--background-color-alt);
  border-radius: var(--radius) var(--radius) 0 0;
  color: var(--text-color-alt);
}
.loop-editor-label {
  display: flex;
  justify-content: center;
  align-items: center;
}
.loop-editor > .sequence-editor {
  border-radius: 0 0 var(--radius) var(--radius);
}

.period-editor {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 0.5rem;
}

.seconds-editor {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  gap: 0.5rem;
}
.seconds-editor-value {
  display: flex;
  justify-content: center;
  align-items: center;

  min-width: 6ch;
  font-size: 2rem;
}
.seconds-editor-button {
  display: flex;
  flex-direction: row;
  align-items: baseline;
  justify-content: center;

  padding: 0.25rem;
}

.time-part-input {
  all: unset;
  appearance: textfield;
  -moz-appearance: textfield;
  width: 2ch;
  border: 0;
  padding: 0;
  background-color: transparent;
  color: inherit;
  font-size: inherit;
  font-variant-numeric: tabular-nums;
}
.time-part-input::-webkit-inner-spin-button,
.time-part-input::-webkit-outer-spin-button {
  appearance: none;
}

.number-editor {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  gap: 0.5rem;
}
.number-editor-value {
  display: flex;
  justify-content: center;
  align-items: center;

  min-width: 6ch;
  font-size: 2rem;
  font-variant-numeric: tabular-nums;
}
.number-editor-button {
  display: flex;
  justify-content: center;
  align-items: center;

  padding: 0.25rem;
}

